# INFERRA-platform

./: .dockerignore  .env.example  .gitignore  .importlinter  AGENTS.md  Dockerfile  INFERRA Fuseki_connection.md  INFERRA_Phase1_Implementation_Plan.md  INFERRA_Phase2_Implementation_Plan.md  INFERRA_Phase4_Implementation_Plan.md  Nadia-Engine Feb-12-2024.log.2024-02-12  Nadia-Engine Feb-12-2024.log.2024-02-13  Nadia-Engine Feb-21-2024.log.2024-02-21  Nadia-Engine Feb-24-2024.log.2024-02-24  Nadia-Engine Feb-24-2024.log.2024-02-27  Pipfile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  furture name of engine INFERRA.md  fuseki_connection.md  future INFERRA GraphRAG Integration Plan.md  nadia_prompt.md  pyproject.toml  requirements.txt  suggested_enhancement_for_phase1_implementation.md  suggested_enhancement_for_phase4_implementation.md  utils.py
.claude/: settings.local.json
Static Folder/: DRCA.md  Defence Force (Home Loans Assistance) Act 1990.docx  Defence Force (Home Loans Assistance) Act 1990.md  Inferra-DRCA.md  Inferra-Defence Force (Home Loans Assistance) Act 1990.md  KIMI-Nadia-DRCA.md  nadia_prompt.md
benchmarks/: baseline_phase2.json  baseline_phase2_5_sparse.json  baseline_phase3.json  baseline_phase4.json  baseline_phase5.json  baseline_v0.json
docs/: INFERRA Redis run in container.md  INFERRA_Architecture_Combined_Recommendations_revised_V2.md  INFERRA_Consolidated_Architecture_and_Implementation_Plan.md  INFERRA_Phase1_Bug_Analysis_and_Library_Research.md  INFERRA_Phase2_5_DependencyMatrix_Bridge_Plan.md  fastapi_conversion_plan.md  (+12 more)
(+528 files in other folders)
