[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferra-pyrest"
version = "2.0.0"
description = "INFERRA PyRest - Rule-based inference engine with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.26",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "openai>=2.8.1",
    "pypandoc>=1.16.2",
    "requests>=2.31.0",
    "sympy>=1.14.0",
    "numpy>=1.26.0",
    "sqlalchemy-serializer>=1.4.1",
    "structlog>=24.1.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
async = [
    "celery>=5.3.6",
    "redis>=5.0.0",
]
semantic = [
    "rdflib>=7.0.0",
]
reasoning = [
    "z3-solver>=4.12.0",
]
observability = [
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring live Docker services (Redis, Fuseki)",
]
